--- a/templates/baseRestaurant.html.twig
+++ b/templates/baseRestaurant.html.twig
@@ -50,23 +50,21 @@
           <a href=""><i class="zmdi zmdi-view-dashboard"></i><span>Tableaux de bord</span></a>
         </li>
         <li>
-          <a href=""><i class="zmdi zmdi-card"></i><span>Commande</span></a>
+          <a href="{{path('delivery_index')}}"><i class="zmdi zmdi-card"></i><span>Commande</span></a>
         </li>
         <li> <a href=""><i class="zmdi zmdi-account-circle"></i> <span>Clients</span></a>
         </li>
         <li>
-          <a href=""><i class="zmdi zmdi-edit"></i><span>Categories</span></a>
+          <a href="{{path('category_index')}}"><i class="zmdi zmdi-edit"></i><span>Categories de produits</span></a>
         </li>
       
 
         <li>
-          <a href=""><i class="zmdi zmdi-edit"></i><span>Produits</span> </a>
+          <a href="{{path('product_index')}}"><i class="zmdi zmdi-edit"></i><span>Produits</span> </a>
         </li>
 
-
-
         <li>
-          <a href=""> <i class="zmdi zmdi-undo"></i><span>Retour au site</span></a>
+          <a href="restaurant_index"> <i class="zmdi zmdi-undo"></i><span>Restaurants</span></a>
 
         <li>
           <a href="" target="_blank"> <i class="zmdi zmdi-lock"></i><span>Déconnexion</span> </a>
