--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -3,18 +3,15 @@
 {% block title %}Hello MainController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+ 
+ {% for restaurant in restaurants %}
+ <li>{{ restaurant.name }} </li>
+  <li>{{ restaurant.id }} </li>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+  <a href="{{path('produitrestaurant',{'id':'restaurant.id'}) }}">ici</a>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/Autobrasseur/Desktop/CDA/projet1/monresto/src/Controller/MainController.php'|file_link(0) }}">src/Controller/MainController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/Autobrasseur/Desktop/CDA/projet1/monresto/templates/main/index.html.twig'|file_link(0) }}">templates/main/index.html.twig</a></code></li>
-    </ul>
-</div>
+
+ {% endfor %}
+
+
 {% endblock %}
