--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -8,7 +8,7 @@
  <li>{{ restaurant.name }} </li>
   <li>{{ restaurant.id }} </li>
 
-  <a href="{{path('produitrestaurant',{'id':'restaurant.id'}) }}">ici</a>
+<a href="{{path('produitrestaurant',{'id':restaurant.id}) }}">ici</a>
 
 
  {% endfor %}
