--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -16,7 +16,7 @@
             </div>
             <div class="d-flex flex-column align-items-center w-50">
             <h1 class="h3 mb-3 font-weight-normal">Inscription</h1>
-                <form method="post" class="w-50">
+            <div class="w-50">
             {{ form_start(registrationForm) }}
                 {{ form_row(registrationForm.email, {'attr': {'class': 'form-control w-100 mb-2','placeholder': 'Veuillez saisir votre Email'}}) }}
                 {{ form_row(registrationForm.plainPassword) }}
@@ -26,7 +26,7 @@
                 {{ form_row(registrationForm.agreeTerms) }}
                 <button class="btn btn-lg btn-primary btn-block" type="submit">S'inscrire</button>
             {{ form_end(registrationForm) }}
-                </form>
+                </div>
             </div>
     </div>
 {% endblock %}
