--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -36,7 +36,7 @@
             </div>
         {% endif %}
         <div class="d-flex flex-column align-items-center mt-5 pt-5">
-        <form class="form-signin w-100" method="post" action="<?=$path?>/connexion">
+        <form class="form-signin w-100" method="post">
             <div class="d-flex flex-column align-items-center">
                 <img class="mb-4" src="/img/logoprojet.png" alt="" width="150" height="150">
             </div>
