--- a/templates/info_user/index.html.twig
+++ b/templates/info_user/index.html.twig
@@ -7,16 +7,16 @@
 
 <h1>Modifications des informations utilisateurs.</h1>
 
+{# {{form(form)}} #}
   {{ form_start(form) }}
-        {{ form_row(form.firstname) }}
-        {{ form_row(form.lastname) }}
+        {{ form_row(form.firstName) }}
+        {{ form_row(form.lastName) }}
         {{ form_row(form.adress) }}
         {{ form_row(form.city) }}
-        {{ form_row(form.adress) }}
      
        
 
         <button type="submit" class="btn">Register</button>
-    {{ form_end(form) }}
+    {{ form_end(form) }} 
     
 {% endblock %}
