Redirection barre de nav

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,7 @@
       
     </head>
     <body>
+        {% include "nav_bar/index.html.twig" %}
         {% block body %}{% endblock %}
         
 <script src="{{asset('Front/assets/js/vendor/modernizr-3.5.0.min.js')}}"></script>
