--- a/templates/nav_bar/index.html.twig
+++ b/templates/nav_bar/index.html.twig
@@ -1,19 +1,18 @@
     <header>
         <!-- Header Start -->
         <div class="header-area">
-            <div class="main-header header-sticky">
+            <div class="main-header header-sticky pl-1">
                 <div class="container-fluid">
                     <div class="menu-wrapper">
                         <!-- Logo -->
                         <div class="logo">
-                            <a href="index.html"><img src="assets/img/logo.jpg" alt="" style="width: 350px;"></a>
+                            <a href="{{ path('main') }}"><img src="{{asset('img/logoprojet2.png')}}" alt="" style="width: 350px;"></a>
                         </div>
                         <!-- Main-menu -->
                         <div class="main-menu d-none d-lg-block">
                             <nav>                                                
                                 <ul id="navigation">  
-                                    <li><a href="">Acceuil</a></li>
-                                    <li><a href="">Nous</a></li>
+                                    <li><a href="{{ path('main') }}">Acceuil</a></li>
                                     <li><a href="#">Categories</a>
                                         <ul class="submenu">
                                             <li>
@@ -25,25 +24,12 @@
                                     <li><a href="">Panier</a>
                                        
                                     </li>
-                                    <li><a href="">Connexion</a>
-                                        <ul class="submenu">
-                                        <li><a href="">Inscription</a></li>
-                                            <li><a href="">Connexion</a></li>
-                                            <li><a href="">Se déconnecter</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="">Contact</a></li>
                                 </ul>
                             </nav>
                         </div>
                         <!-- Header Right -->
                         <div class="header-right">
                             <ul>
-                                <li>
-                                    <div class="nav-search search-switch">
-                                        <span class="flaticon-search"></span>
-                                    </div>
-                                </li>
                                 <li> <a href=""><span class="flaticon-user"></span></a></li>
                                 <li><a href=""><span class="flaticon-shopping-cart"></span></a> </li>
                             </ul>
