--- a/templates/info_user/index.html.twig
+++ b/templates/info_user/index.html.twig
@@ -13,10 +13,11 @@
         {{ form_row(form.lastName) }}
         {{ form_row(form.adress) }}
         {{ form_row(form.city) }}
-     
-       
+        {{ form_row(form.relation_secteur, {'label': 'Secteur'} )}}
+        {{ form_row(form.relation_zipcode,{'label': 'Code postale'}) }}
 
-        <button type="submit" class="btn">Register</button>
+        <button type="submit" class="btn">Enregistrer</button>
+        <button type="submit" class="btn">Retour</button>
     {{ form_end(form) }} 
     
 {% endblock %}
