--- a/templates/nav_bar/index.html.twig
+++ b/templates/nav_bar/index.html.twig
@@ -30,10 +30,18 @@
                             </nav>
                         </div>
                         <!-- Header Right -->
-                        <div class="header-right">
-                            <ul>
-                                <li> <a href=""><span class="flaticon-user"></span></a></li>
-                                <li><a href=""><span class="flaticon-shopping-cart"></span></a> </li>
+                        <div class="header-right main-menu">
+                            <ul id="navigation">
+                                <li> <a href="#"><span class="flaticon-user"></span></a>
+                                    <ul class="submenu">
+                                        <li>
+                                            <a href="{{ path('info_user') }}">Mon profil</a>
+                                            <a href="{{ path('app_logout') }}">Déconnexion</a>
+                                            <a href="{{ path('app_login') }}">Connexion</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li><a href="{{ path('panier') }}"><span class="flaticon-shopping-cart"></span></a> </li>
                             </ul>
                         </div>
                     </div>
