--- a/templates/info_user/index.html.twig
+++ b/templates/info_user/index.html.twig
@@ -12,9 +12,8 @@
         {{ form_row(form.lastName) }}
         {{ form_row(form.adress) }}
         {{ form_row(form.city) }}
-        {{ form_row(form.relation_secteur, {'label': 'Secteur'} )}}
-        {{ form_row(form.relation_zipcode,{'label': 'Code postale'}) }}
-
+        {{ form_row(form.relation_zipcode,{'label': 'Code postale'})}} 
+        <button type="submit" class="btn-success">Enregistrer</button>
     {{ form_end(form) }} 
     
 {% endblock %}
