--- a/templates/nav_bar/index.html.twig
+++ b/templates/nav_bar/index.html.twig
@@ -35,9 +35,13 @@
                                 <li> <a href="#"><span class="flaticon-user"></span></a>
                                     <ul class="submenu">
                                         <li>
-                                            <a href="{{ path('info_user') }}">Mon profil</a>
-                                            <a href="{{ path('app_logout') }}">Déconnexion</a>
-                                            <a href="{{ path('app_login') }}">Connexion</a>
+                                            {% if app.user %}
+                                                <a href="{{ path('informations') }}">Mon profil</a>
+                                                <a href="{{ path('app_logout') }}">Déconnexion</a>
+                                            {% else %}
+                                                <a href="{{ path('app_login') }}">Connexion</a>
+                                                <a href="{{ path('app_register') }}">Inscription</a>
+                                            {% endif %}
                                         </li>
                                     </ul>
                                 </li>
