--- a/templates/livreur/show.html.twig
+++ b/templates/livreur/show.html.twig
@@ -25,6 +25,14 @@
                         </p>
                        
                     </div>
+                     <div class='col-md-6'>
+        
+                    <h4> Adresse du restaurant:</h4> 
+                    {{ order.restaurant }} <br>
+                    {{ order.restaurant.adress }}<br>
+                    {{ order.restaurant.city}} -
+                   <br>{{ order.restaurant.phone}} </div>
+                    </div>
                    
                 </div>
                 <div class='row mt-5'>
@@ -96,16 +104,14 @@
                     <div class='col-md-6'>
                         <p>Status de la commande : {{order.status}}</p>
                         <label class='mt-5'>Changer le status</label>
-                        <form method='post' action='{{path('order_status_update')}}'>
+                        <form method='post' action='{{path('livreur_status_update')}}'>
                         <input type="hidden" name="orderId" value="{{ order.id }}">
                         <select class='form-control' name='statusId'>
-                        <option value="accepte" ></option>
-                           <option value="enPreparation">prise en charge par le livreur</option>
-                           <option value="valider">Valider la livraison</option>
-                           
-                            
+
+                         <option value="enLivraison" >prise en charge par le livreur</option>
+
                         </select>
-                        <button id='update_status' class='btn btn-outline-white btn-white mt-5'>Changer</button>
+                        <button id='update_status' class='btn btn-outline-white btn-white mt-5'>Prendre en charge la livraison </button>
                         </form>
                         
                       
