--- a/templates/nav_bar/index.html.twig
+++ b/templates/nav_bar/index.html.twig
@@ -37,6 +37,7 @@
                                         <li>
                                             {% if app.user %}
                                                 <a href="{{ path('informations') }}">Mon profil</a>
+                                              <a href="{{path('myorder')}}">Mes commandes</a>
                                                 <a href="{{ path('app_logout') }}">Déconnexion</a>
                                             {% else %}
                                                 <a href="{{ path('app_login') }}">Connexion</a>
