--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <h1>Product index</h1>
-
+    <div class="table-responsive">
     <table class="table">
         <thead>
             <tr>
@@ -38,6 +38,7 @@
         {% endfor %}
         </tbody>
     </table>
+    </div>
 
     <a href="{{ path('product_new') }}">Create new</a>
 {% endblock %}
