--- a/templates/restaurant/index.html.twig
+++ b/templates/restaurant/index.html.twig
@@ -1,10 +1,10 @@
-{% extends 'base.html.twig' %}
+{% extends 'baseRestaurant.html.twig' %}
 
 {% block title %}Restaurant index{% endblock %}
 
 {% block body %}
     <h1>Restaurant index</h1>
-
+    <div class="table-responsive">
     <table class="table">
         <thead>
             <tr>
@@ -36,6 +36,6 @@
         {% endfor %}
         </tbody>
     </table>
-
+</div>
     <a href="{{ path('restaurant_new') }}">Create new</a>
 {% endblock %}
