--- a/templates/restaurant_type/index.html.twig
+++ b/templates/restaurant_type/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <h1>RestaurantType index</h1>
-
+    <div class="table-responsive">
     <table class="table">
         <thead>
             <tr>
@@ -30,6 +30,6 @@
         {% endfor %}
         </tbody>
     </table>
-
+</div>
     <a href="{{ path('restaurant_type_new') }}">Create new</a>
 {% endblock %}
