--- a/templates/baseLivreur.html.twig
+++ b/templates/baseLivreur.html.twig
@@ -52,7 +52,8 @@
         <li>
           <a href="{{path('livreur')}}"><i class="zmdi zmdi-card"></i><span>Commande</span></a>
         </li>
-        <li> <a href=""><i class="zmdi zmdi-account-circle"></i> <span>Clients</span></a>
+        
+        <li> <a href="{{path('info_vehicle')}}"><i class="zmdi zmdi-account-circle"></i> <span>Mes informations</span></a>
         </li>
         <li>
           <a href=""><i class="zmdi zmdi-edit"></i><span>Categories de produits</span></a>
