--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -66,7 +66,7 @@
 
         <p>Total de votre panier :{{ total }} € </p>
 
-        <p>Frais de livraison :<span class="shippingCost"></span> €</p>
+        <p>Frais de livraison : {{ shipping }} €</p>
         <p>Total TTC : <span class="totalOrder"></span> € </p>
         {{ form_end(form) }}
         </div>
