--- a/templates/info_user/index.html.twig
+++ b/templates/info_user/index.html.twig
@@ -4,16 +4,17 @@
 
 {% block body %}
 
+<div class="d-flex flex-column align-items-center">
+    <h1>Modifications des informations utilisateurs.</h1>
 
-<h1>Modifications des informations utilisateurs.</h1>
-
-   {{ form_start(form) }}
-        {{ form_row(form.firstName) }}
-        {{ form_row(form.lastName) }}
-        {{ form_row(form.adress) }}
-        {{ form_row(form.city) }}
-        {{ form_row(form.relation_zipcode,{'label': 'Code postale'})}} 
-        <button type="submit" class="btn-success">Enregistrer</button>
+    {{ form_start(form) }}
+            {{ form_row(form.firstName) }}
+            {{ form_row(form.lastName) }}
+            {{ form_row(form.adress) }}
+            {{ form_row(form.city) }}
+            {{ form_row(form.relation_zipcode,{'label': 'Code postal','class': 'form-control w-100 mb-2'})}} 
+            <button type="submit" class="btn btn-success mt-3">Enregistrer</button>
     {{ form_end(form) }} 
+</div>
     
 {% endblock %}
