--- a/templates/baseLivreur.html.twig
+++ b/templates/baseLivreur.html.twig
@@ -53,23 +53,10 @@
           <a href="{{path('livreur')}}"><i class="zmdi zmdi-card"></i><span>Commande</span></a>
         </li>
         
-        <li> <a href="{{path('info_vehicle')}}"><i class="zmdi zmdi-account-circle"></i> <span>Mes informations</span></a>
+        <li> <a href="{{path('info_vehicle')}}"><i class="zmdi zmdi-account-circle"></i> <span>Mon Véhicule</span></a>
         </li>
         <li>
           <a href=""><i class="zmdi zmdi-edit"></i><span>Categories de produits</span></a>
-        </li>
-      
-
-        <li>
-          <a href=""><i class="zmdi zmdi-edit"></i><span>Produits</span> </a>
-        </li>
-
-        <li>
-          <a href=""> <i class="zmdi zmdi-undo"></i><span>Restaurants</span></a>
-
-        <li>
-          <a href="" target="_blank"> <i class="zmdi zmdi-lock"></i><span>Déconnexion</span> </a>
-        </li>
       </ul>
     </div>
     <!--End sidebar-wrapper-->
