correction des relation

--- a/templates/main/produit.html.twig
+++ b/templates/main/produit.html.twig
@@ -46,7 +46,7 @@
                          
                         </div>
                 
-                        <a href="{{path('panier_add',{'id': product.id})}}"  class="btn">Ajouter au panier</button> </a>
+                        <a href="{{path('panier_add',{'id': product.id})}}"  class="btn" class="add-product">Ajouter au panier</button> </a>
               
                   <div class="d-block p-2 font-weight-bold"></div>
                     </div>
