--- a/templates/main/produitrestaurant.html.twig
+++ b/templates/main/produitrestaurant.html.twig
@@ -5,7 +5,7 @@
                                   <img src="{{asset('image/'~product.picture)}}" alt="">
                                   <div class="img-cap">
                                      
-                                        <span><a href="{{path('panier_add',{'id': product.id})}}"  id="myBtn"  >Ajouter au panier</button> </a></span>
+                                        <span><a href="{{path('panier_add',{'id': product.id})}}"  id="myBtn" class="add-product"  >Ajouter au panier</button> </a></span>
                
                                   </div>
                                   <div class="favorit-items">
