--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -47,7 +47,7 @@
     <div class="col-md-4"></div>
     <div class="row" style="padding-top:5%;">
      <div class="col-md-12">{{ form_row(form.time)}}</div><br>
-      <div class="col-md-6">
+      <div class="col-md-6 mb-5">
       <br>
 
       <h4>Vos coordonnées pour la livraison</h4>
