--- a/templates/baseLivreur.html.twig
+++ b/templates/baseLivreur.html.twig
@@ -52,7 +52,10 @@
         <li>
           <a href="{{path('livreur')}}"><i class="zmdi zmdi-card"></i><span>Commande Prête</span></a>
         </li>
-        <li> <a href="{{path('info_vehicle')}}"><i class="zmdi zmdi-account-circle"></i> <span>Mes informations</span></a>
+        <li> <a href="{{path('info_vehicle')}}"><i class="zmdi zmdi-account-circle"></i> <span>Ajouter un véhicule</span></a>
+         </li>
+               <li> <a href=""><i class="zmdi zmdi-account-circle"></i> <span>Mes véhicule</span></a>
+         </li>
          <li>
           <a href="{{path('livreur_Valide')}}"><i class="zmdi zmdi-card"></i><span>Commande à VALIDER</span></a>
         </li>
