--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -47,7 +47,7 @@
                       </div>
                     </td>
                     <td>
-                      <h5>{{ panieritem.product.price }}</h5>
+                      <h5>{{ panieritem.product.price }} €</h5>
                     </td>
                     <td>
                       <div class="product_count d-flex">
@@ -61,7 +61,7 @@
 
                     </td>
                     <td>
-                      <h5 class="subtotal">{{ panieritem.product.price * panieritem.quantity }}</h5>
+                      <h5 class="subtotal">{{ panieritem.product.price * panieritem.quantity }} €</h5>
                     </td>
                     <td>
                       <a href="{{path('suppression_product',{'id' : panieritem.product.id} )}}" class="btn">Supprimer</button>
@@ -87,10 +87,10 @@
                     <td></td>
 
                     <td>
-                      <h5>Sous-total</h5>
+                      <h5>Sous-total </h5>
                     </td>
                     <td>
-                    <h5 class="total">{{total}}</h5>
+                    <h5 class="total">{{total}} €</h5>
 
                     </td>
                     <td></td>
