--- a/templates/main/produitrestaurant.html.twig
+++ b/templates/main/produitrestaurant.html.twig
@@ -14,7 +14,7 @@
                               </div>
                               <div class="popular-caption">
                                   <h3><a href="{{path('produit_id',{'id': product.id })}}">{{ product.name }}</a></h3>
-                                  <span>{{ product.price }}</span>
+                                  <span>{{ product.price }} €</span>
                               </div>
                           </div>
                       </div>
