--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -22,7 +22,7 @@
             <tr>
                 <td>{{ product.id }}</td>
                 <td>{{ product.name }}</td>
-                <td>{{ product.price }}</td>
+                <td>{{ product.price }} €</td>
                 <td>{{ product.stock }}</td>
                 <td>{{ product.picture }}</td>
                 <td>{{ product.description }}</td>
