--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -17,7 +17,7 @@
             </tr>
             <tr>
                 <th>Price</th>
-                <td>{{ product.price }}</td>
+                <td>{{ product.price }} €</td>
             </tr>
             <tr>
                 <th>Stock</th>
